--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#464BFF"/>
   <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon"/>
   
-  <title>Calclulo - All in one online calculator</title>
+  <title>Calclulo - Free All in one online calculator</title>
   
   <link rel="manifest" href="/assets/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,7 +29,7 @@
 
 <meta name="title" content="Calclulo: All In One Online Calculators for Finance Health Agriculture Tech and More">
 <meta name="description" content="Calclulo offers fast accurate and free online calculators and conversion tools for finance math health food agriculture engineering and daily life. Trusted by students professionals and farmers. Find calculators for loan APY conversions CGPA nutrition and more with clear explanations and mobile friendly design.">
-<meta name="keywords" content="online calculators, conversion tools, finance calculator, loan calculator, APY calculator, CGPA calculator, nutrition calculator, agriculture calculator, herbicide calculator, unit converter, bandwidth calculator, download time calculator, grams to cups, currency converter, math tools">
+
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <link rel="canonical" href="https://calclulo.com/">
